Added support for a maximum age of an item in a feed, resolving #6.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -8,3 +8,4 @@ channel_id = MAGIC CHANNEL ID HERE
 feed_url = https://community.elitedangerous.com/galnet-rss
 item_url_base = https://community.elitedangerous.com/galnet/uid/
 rss_refresh_time = 300
+max_age = 86400
