--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -3,9 +3,10 @@ login_email = blah@example.com
 login_password = PASSWORD HERE
 db_path = feed2discord.db
 
-channel_id = MAGIC CHANNEL ID HERE
-
 feed_url = https://community.elitedangerous.com/galnet-rss
 item_url_base = https://community.elitedangerous.com/galnet/uid/
 rss_refresh_time = 300
 max_age = 86400
+
+[CHANNELS]
+one = MAGIC CHANNEL ID HERE
