Start the setup for multiple feeds

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -3,10 +3,19 @@ login_email = blah@example.com
 login_password = PASSWORD HERE
 db_path = feed2discord.db
 
-feed_url = https://community.elitedangerous.com/galnet-rss
-item_url_base = https://community.elitedangerous.com/galnet/uid/
+[CHANNELS]
+one = MAGIC CHANNEL ID HERE
+two = ANOTHER MAGIC ID
+
+[DEFAULT]
 rss_refresh_time = 300
 max_age = 86400
 
-[CHANNELS]
-one = MAGIC CHANNEL ID HERE
+[galnet]
+channels = one,two
+feed_url = https://community.elitedangerous.com/galnet-rss
+item_url_base = https://community.elitedangerous.com/galnet/uid/
+
+[ednews]
+channels = two
+feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
