First steps on having fields in a feed be configurable, including changing how a message is built and how tags are handled. Once I get this working, perhaps Issue #2 can be closed...

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -22,3 +22,4 @@ fields = url,title,published,description
 [ednews]
 channels = two
 feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
+fields = link,title,published,description
