Handling that galnet special case to resolve #4

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -15,11 +15,10 @@ max_age = 86400
 [galnet]
 channels = one,two
 feed_url = https://community.elitedangerous.com/galnet-rss
-item_url_base_plus_guid = 1
 item_url_base = https://community.elitedangerous.com/galnet/uid/
-fields = url,title,published,description
+fields = guid,**title**,_published_,description
 
 [ednews]
 channels = two
 feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
-fields = link,title,published,description
+fields = link,**title**,_published_,description
