Instead of item published date being hardcoded or configured, we have a list of date fields to try, and fall back to "now" if none of those work.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -1,24 +1,66 @@
 [MAIN]
+# 0 just prints some basic info as thing runs
+# 1 prints debug stuff for this bot
+# 2 and above start printing debug stuff for libraries, etc
 debug = 0
+# I recommend creating a separate bot account.
 login_email = blah@example.com
 login_password = PASSWORD HERE
+# You can just leave this alone, unless you might try to run from other than current directory:
 db_path = feed2discord.db
+
+# Log in as your bot account, accept any required invites, get all the roles you need, etc...
+# The the last bit of the link is the id needed.
+# The name here is purely internal to the bot, and doesn't need to match.
 
 [CHANNELS]
 one = MAGIC CHANNEL ID HERE
 two = ANOTHER MAGIC ID
+testing = 81402706320699392
 
 [DEFAULT]
-rss_refresh_time = 300
+# time between refreshes of a feed
+rss_refresh_time = 600
+# maximum age of a post before it's discarded:
 max_age = 86400
 
+
+# This is a fairly typical Drupal RSS feed:
+[ednews]
+# channel ids from [CHANNELS], separated by commas
+channels = two
+# The RSS or Atom feed URL:
+feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
+# fields, separated by commas
+# Special handling:
+# - a field in "quotes" just returns the bit inside the quotes instead of the actual field
+#   ("Feed Name" or "@everyone"?)
+# - a field in *asterisks* or _underscores_ gets italicized
+# - a field in **double-asterisks** gets bolded
+# - ***triple*** gets you bold italics
+# - A field in `backquotes` gets marked up as code
+# - For a code block, wrap in ```
+# - a field with no markup here will have the HTML in it replaced with markdown (discord's format language)
+# If you want a field that contains HTML to have a chance of not being horrifyingly ugly, do the plain option.
+fields = link,**title**,_published_,description
+
+# Despite the name, this is an atom feed.
+# I'm not sure if the date thing they do is unusual for Atom feeds or not:
+[discordreddit]
+channels = testing
+# reddit feeds seem to have a date in a different field:
+pubDate_field = date
+feed_url = https://www.reddit.com/r/discordapp/.rss
+# discord formats reddit links pretty nicely already...
+fields = link
+# busy, so only look at last hour's posts:
+max_age = 3600
+
+# Galnet doesn't have URLs in the feed, but they can be calculated. Unusual:
 [galnet]
 channels = one,two
 feed_url = https://community.elitedangerous.com/galnet-rss
+# if you set item_url_base, then when the guid field is encountered, it gets the item_url_base stuck to the start.
+# If you need a guid-based URL *and* a guid, do something like: guid,*guid*
 item_url_base = https://community.elitedangerous.com/galnet/uid/
 fields = guid,**title**,_published_,description
-
-[ednews]
-channels = two
-feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
-fields = link,**title**,_published_,description
