Make it clearer that you can change the gameplayed thing.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -8,6 +8,7 @@ login_email = blah@example.com
 login_password = PASSWORD HERE
 # You can just leave this alone, unless you might try to run from other than current directory:
 db_path = feed2discord.db
+#gameplayed = discord_rss_bot
 
 # Log in as your bot account, accept any required invites, get all the roles you need, etc...
 # The the last bit of the link is the id needed.
