Make the "send_typing" thing configurable.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -24,7 +24,7 @@ testing = 81402706320699392
 rss_refresh_time = 900
 # maximum age of a post before it's discarded:
 max_age = 86400
-
+#send_typing = 1
 
 # This is a fairly typical Drupal RSS feed:
 [ednews]
