Starting work on filtering (Issue #11).

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -63,3 +63,5 @@ feed_url = https://community.elitedangerous.com/galnet-rss
 # If you need a guid-based URL *and* a guid, do something like: guid,*guid*
 item_url_base = https://community.elitedangerous.com/galnet/uid/
 fields = "@everyone",guid,**title**,_published_,description
+filter_field = title
+filter_exclude = ^Galactic News: (Weekly .* (List|Report|Digest)|Focus on Democracy)$
