Change reddit examples to use the "new" feed instead of default feed. This should help people avoid running into the "nothing is new" issue like #19.

--- a/feed2discord.examples.ini
+++ b/feed2discord.examples.ini
@@ -41,9 +41,10 @@ fields = link,**title**,*pubDate*,description
 # A Reddit feed.
 # Only including the link, because Discord already expands that into a lot of detail.
 # Half hour refresh because it can be urgent...
+# Reddit seems to give a better feed with the "/new" in the feed (otherwise it defaults to "hot" or something...)
 [eliteCG]
 rss_refresh_time = 1800
-feed_url = https://www.reddit.com/r/EliteCG/.rss
+feed_url = https://www.reddit.com/r/EliteCG/new/.rss
 fields = link
 
 # A phpBB site.
