--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -49,7 +49,7 @@ fields = link,**title**,_published_,description
 # I'm not sure if the date thing they do is unusual for Atom feeds or not:
 [discordreddit]
 channels = testing
-feed_url = https://www.reddit.com/r/discordapp/.rss
+feed_url = https://www.reddit.com/r/discordapp/new/.rss
 # discord formats reddit links pretty nicely already...
 fields = link
 # busy, so only look at last hour's posts:
