Make debugging "too old" issues easier...

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -2,6 +2,7 @@
 # 0 just prints some basic info as thing runs
 # 1 prints debug stuff for this bot
 # 2 and above start printing debug stuff for libraries, etc
+# 4 and above includes full parsed items, which can be quite verbose...
 debug = 0
 # I recommend creating a separate bot account.
 login_email = blah@example.com
