--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -4,9 +4,17 @@
 # 2 and above start printing debug stuff for libraries, etc
 # 4 and above includes full parsed items, which can be quite verbose...
 debug = 0
+
+# email/password combo is the old method.
 # I recommend creating a separate bot account.
-login_email = blah@example.com
-login_password = PASSWORD HERE
+#login_email = blah@example.com
+#login_password = PASSWORD HERE
+
+# now you need to get a bot token.
+# https://discordapp.com/developers/docs/topics/oauth2
+# https://discordapp.com/developers/applications/me#top
+login_token = abc123
+
 # You can just leave this alone, unless you might try to run from other than current directory:
 db_path = feed2discord.db
 #gameplayed = discord_rss_bot
