--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -10,6 +10,9 @@ debug = 0
 #login_email = blah@example.com
 #login_password = PASSWORD HERE
 
+#The timezone of the machine you're running the client on.
+timezone = utc
+
 # now you need to get a bot token.
 # https://discordapp.com/developers/docs/topics/oauth2
 # https://discordapp.com/developers/applications/me#top
