Add another timezone example and add more debug output for timezone stuff.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -12,6 +12,7 @@ debug = 0
 
 #The timezone of the machine you're running the client on.
 timezone = utc
+# timezone = America/Los_Angeles
 
 # now you need to get a bot token.
 # https://discordapp.com/developers/docs/topics/oauth2
