Documentation and comment fixes

--- a/feed2discord.examples.ini
+++ b/feed2discord.examples.ini
@@ -2,6 +2,7 @@
 # So skipping the MAIN and CHANNELS sections...
 # and skipping the config of which channels each feed goes into...
 [MAIN]
+timezone = America/Los_Angeles
 
 [CHANNELS]
 
