--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -75,4 +75,6 @@ feed_url = https://community.elitedangerous.com/galnet-rss
 # if you set item_url_base, then when the guid field is encountered, it gets the item_url_base stuck to the start.
 # If you need a guid-based URL *and* a guid, do something like: guid,*guid*
 item_url_base = https://community.elitedangerous.com/galnet/uid/
-fields = "@everyone",guid,**title**,_published_,description
+fields = guid,**title**,_published_,description
+# for just one channel, ping @everyone
+two.fields = "@everyone",guid,**title**,_published_,description
