Added example of delay for one room

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -78,3 +78,5 @@ item_url_base = https://community.elitedangerous.com/galnet/uid/
 fields = guid,**title**,_published_,description
 # for just one channel, ping @everyone
 two.fields = "@everyone",guid,**title**,_published_,description
+# 5 second delay to the other room
+one.delay = 5
