Adding some icon options...

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -11,6 +11,7 @@ debug = 0
 #login_password = PASSWORD HERE
 
 #The timezone of the machine you're running the client on.
+#On most Linux/Unix systems, you can run "ls -l /etc/localtime" to see what it is.
 timezone = utc
 # timezone = America/Los_Angeles
 
@@ -21,7 +22,12 @@ login_token = abc123
 
 # You can just leave this alone, unless you might try to run from other than current directory:
 db_path = feed2discord.db
+
+# Can set the "game played" to whatever you want
 #gameplayed = discord_rss_bot
+
+# Or pick a different "avatar" icon:
+#avatarfile = avatar.png
 
 # Log in as your bot account, accept any required invites, get all the roles you need, etc...
 # The the last bit of the link is the id needed.
