Add features for Gazelle

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -88,3 +88,34 @@ fields = guid,**title**,_published_,description
 two.fields = "@everyone",guid,**title**,_published_,description
 # 5 second delay to the other room
 one.delay = 5
+
+# Project Gazelle RSS
+[gazelle]
+channels = one,two
+feed_url = https://what.cd/feeds.php?feed=torrents_all&user=xxx&auth=xxx&authkey=xxx
+# Suppose you have one feed with different types of content, which you want to redirect posts to different channels
+# Use python regex!
+# Regex is done on the title field of the entry
+
+# Channel one receives all entries which have a space-padded "MP3" or "AAC" in the title
+one.regex =(\bMP3\b|\bAAC\b) 
+# Channel two receives all entries which do not have space-padded "MP3" or "AAC" in the title
+two.regex =^((?!(\bMP3\b|\bAAC\b)).)*$
+
+# If a channel has no regex field, it always passes (yet to test)
+
+# Consider a feed which provides a list of tags of a entry
+# And that some users want to be notified of these posts
+# Use the @ formatting!
+fields = **title**,comments,@category,"------------------------------"
+# @ format tag turns a field with a space-seperated list of tags into @mentions, provided the @[tag] role exists in the discord server
+# For example, a entry with the list of tags "jazz, piano" will be turned into
+# "<@&[id for jazz role]>, piano" provided a role @jazz exists
+# and when posted it will mention everyone with the @jazz role, and print "@jazz, piano"
+
+# Personal recommendation is to create user classes which DO NOT conflict with tag names
+# And also create a user role which is able to modify their own role, hence modifying their subscriptions
+# For example, a role hierarchy would be, in descending order:
+# Admin, bots, special users, user (this is what you promote everyone to, probably automatically)
+# (tag roles here) house, jazz, piano, dubstep
+# (finally the @everyone) @everyone
