YouTube examples added.

--- a/feed2discord.examples.ini
+++ b/feed2discord.examples.ini
@@ -86,3 +86,19 @@ fields = **title**,*pubDate*,link
 [laveradiopodcast]
 feed_url = http://laveradio.com/feed/laveradio.xml
 fields = **title**,*pubDate*,link
+
+# YouTube feed example
+# Get username (in URL) and do the "user=" version
+# Or, go to the YouTube page, click "videos", then view source and search for "RSS" in the code
+[YouTubeObsidianAnt]
+max_age = 86400
+# feed_url = https://www.youtube.com/feeds/videos.xml?user=ObsidianAnt
+feed_url = https://www.youtube.com/feeds/videos.xml?channel_id=UCtiq6FTXiFKQm-wqMuRijgA
+fields = **title**,*published*,link
+
+# For a playlist, go to the page for the playlist and take the id from the list= param
+# and add it to the end of https://www.youtube.com/feeds/videos.xml?playlist_id=
+[YouTubeObsidianLetsPlay]
+max_age = 86400
+feed_url = https://www.youtube.com/feeds/videos.xml?playlist_id=PLmX89YRYfWK2rUtmiKDg-R85FcRlLa8X4
+fields = **title**,*published*,*link*
