Add documentation/examples for the new link stuff

--- a/feed2discord.examples.ini
+++ b/feed2discord.examples.ini
@@ -77,6 +77,16 @@ fields = link,**title**,*pubDate*
 feed_url = https://github.com/cmmcleod/coriolis/releases.atom
 fields = "http://coriolis.io/ update",**title**,*updated*
 
+# Github project releases with all the stuff directly in the post and the link prevented from giving a link preview:
+[FeedBotReleases]
+feed_url = https://github.com/freiheit/discord_feedbot/releases.atom
+fields = "**EDMarketConnector Release**",**title**,*updated*,<link>,summary
+
+# Github project commits (to master branch only):
+[FeedBotCommits]
+feed_url = https://github.com/freiheit/discord_feedbot/commits/master.atom
+fields = "**EDMarketConnector Commit**",**title**,*updated*,<link>
+
 # A podcast that's up on feedburner...
 [huttonorbitalpodcast]
 feed_url = http://feeds.feedburner.com/HuttonOrbital
