--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -61,6 +61,8 @@ feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
 # - a field in **double-asterisks** gets bolded
 # - ***triple*** gets you bold italics
 # - A field in `backquotes` gets marked up as code
+# - A field in <anglebrackets> won't get a link preview embedded
+# - The "link" field is always assumed to be a URL, and relative URLs will automatically be turned into absolute URLs.
 # - For a code block, wrap in ```
 # - a field with no markup here will have the HTML in it replaced with markdown (discord's format language)
 # If you want a field that contains HTML to have a chance of not being horrifyingly ugly, do the plain option.
