--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -10,8 +10,9 @@ debug = 0
 #login_email = blah@example.com
 #login_password = PASSWORD HERE
 
-#The timezone of the machine you're running the client on.
-#On most Linux/Unix systems, you can run "ls -l /etc/localtime" to see what it is.
+# The timezone of the machine you're running the client on.
+# On most Linux/Unix systems, you can run "ls -l /etc/localtime" to see what
+# it is.
 timezone = utc
 # timezone = America/Los_Angeles
 
@@ -20,7 +21,8 @@ timezone = utc
 # https://discordapp.com/developers/applications/me#top
 login_token = abc123
 
-# You can just leave this alone, unless you might try to run from other than current directory:
+# You can just leave this alone, unless you might try to run from other than
+# current directory:
 db_path = feed2discord.db
 
 # Can set the "game played" to whatever you want
@@ -29,7 +31,8 @@ db_path = feed2discord.db
 # Or pick a different "avatar" icon:
 #avatarfile = avatar.png
 
-# Log in as your bot account, accept any required invites, get all the roles you need, etc...
+# Log in as your bot account, accept any required invites, get all the roles
+# you need, etc...
 # The the last bit of the link is the id needed.
 # The name here is purely internal to the bot, and doesn't need to match.
 
@@ -55,17 +58,20 @@ channels = two
 feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
 # fields, separated by commas
 # Special handling:
-# - a field in "quotes" just returns the bit inside the quotes instead of the actual field
-#   ("Feed Name" or "@everyone"?)
+# - a field in "quotes" just returns the bit inside the quotes instead of
+#   the actual field ("Feed Name" or "@everyone"?)
 # - a field in *asterisks* or _underscores_ gets italicized
 # - a field in **double-asterisks** gets bolded
 # - ***triple*** gets you bold italics
 # - A field in `backquotes` gets marked up as code
 # - A field in <anglebrackets> won't get a link preview embedded
-# - The "link" field is always assumed to be a URL, and relative URLs will automatically be turned into absolute URLs.
+# - The "link" field is always assumed to be a URL, and relative URLs will
+#   automatically be turned into absolute URLs.
 # - For a code block, wrap in ```
-# - a field with no markup here will have the HTML in it replaced with markdown (discord's format language)
-# If you want a field that contains HTML to have a chance of not being horrifyingly ugly, do the plain option.
+# - a field with no markup here will have the HTML in it replaced with
+#   markdown (discord's format language)
+# If you want a field that contains HTML to have a chance of not being
+# horrifyingly ugly, do the plain option.
 fields = link,**title**,_published_,description
 
 # Despite the name, this is an atom feed.
@@ -82,7 +88,8 @@ max_age = 3600
 [galnet]
 channels = one,two
 feed_url = https://community.elitedangerous.com/galnet-rss
-# if you set item_url_base, then when the guid field is encountered, it gets the item_url_base stuck to the start.
+# if you set item_url_base, then when the guid field is encountered, it gets
+# the item_url_base stuck to the start.
 # If you need a guid-based URL *and* a guid, do something like: guid,*guid*
 item_url_base = https://community.elitedangerous.com/galnet/uid/
 fields = guid,**title**,_published_,description
