Move avatars into folder to keep top level neater

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -29,7 +29,7 @@ db_path = feed2discord.db
 #gameplayed = discord_rss_bot
 
 # Or pick a different "avatar" icon:
-#avatarfile = avatar.png
+#avatarfile = avatars/avatar.png
 
 # Log in as your bot account, accept any required invites, get all the roles
 # you need, etc...
