Tiny bit of improvement on the output around filters, to make debugging problems easier.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -109,11 +109,11 @@ feed_url = https://what.cd/feeds.php?feed=torrents_all&user=xxx&auth=xxx&authkey
 # Regex is done on the title field of the entry
 
 # Channel one receives all entries which have a space-padded "MP3" or "AAC" in the title
-one.regex =(\bMP3\b|\bAAC\b) 
+one.filter =(\bMP3\b|\bAAC\b) 
 # Channel two receives all entries which do not have space-padded "MP3" or "AAC" in the title
-two.regex =^((?!(\bMP3\b|\bAAC\b)).)*$
+two.filter =^((?!(\bMP3\b|\bAAC\b)).)*$
 
-# If a channel has no regex field, it always passes (yet to test)
+# If a channel has no filter field, it always passes (yet to test)
 
 # Consider a feed which provides a list of tags of a entry
 # And that some users want to be notified of these posts
