Add simpler opposite of a filter (filter_exclude)

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -39,6 +39,7 @@ db_path = feed2discord.db
 [CHANNELS]
 one = MAGIC CHANNEL ID HERE
 two = ANOTHER MAGIC ID
+three = YET ANOTHER MAGIC ID
 testing = 81402706320699392
 
 [DEFAULT]
@@ -109,9 +110,12 @@ feed_url = https://what.cd/feeds.php?feed=torrents_all&user=xxx&auth=xxx&authkey
 # Regex is done on the title field of the entry
 
 # Channel one receives all entries which have a space-padded "MP3" or "AAC" in the title
-one.filter =(\bMP3\b|\bAAC\b) 
+one.filter =(\bMP3\b|\bAAC\b)
 # Channel two receives all entries which do not have space-padded "MP3" or "AAC" in the title
 two.filter =^((?!(\bMP3\b|\bAAC\b)).)*$
+
+# Channel three also receives entries which do not have space-padded "MP3" or "AAC" in the title
+three.filter_exclude =(\bMP3\b|\bAAC\b)
 
 # If a channel has no filter field, it always passes (yet to test)
 
