Add ability to specify which field is being filtered on

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -114,8 +114,9 @@ one.filter =(\bMP3\b|\bAAC\b)
 # Channel two receives all entries which do not have space-padded "MP3" or "AAC" in the title
 two.filter =^((?!(\bMP3\b|\bAAC\b)).)*$
 
-# Channel three also receives entries which do not have space-padded "MP3" or "AAC" in the title
+# Channel three also receives entries which do not have space-padded "MP3" or "AAC", but in the comments
 three.filter_exclude =(\bMP3\b|\bAAC\b)
+three.filter_field = comments
 
 # If a channel has no filter field, it always passes (yet to test)
 
