Make filter, filter_exclude and filter_field work on feed *or* channel level

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -118,6 +118,9 @@ two.filter =^((?!(\bMP3\b|\bAAC\b)).)*$
 three.filter_exclude =(\bMP3\b|\bAAC\b)
 three.filter_field = comments
 
+# and all other rooms only get the OGG files...
+filter = (\bOGG\b|\bM4A\b)
+
 # If a channel has no filter field, it always passes (yet to test)
 
 # Consider a feed which provides a list of tags of a entry
