Add start_skew option to each feed to help with Issue #47.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -43,6 +43,11 @@ three = YET ANOTHER MAGIC ID
 testing = 81402706320699392
 
 [DEFAULT]
+# maximum time before feed first gets refreshed;
+# actual time is randomly chosen from 0 to this number,
+# to minimize startup impact, especially on the servers we pull feeds from.
+# defaults to rss_refresh_time.
+start_skew = 900
 # time between refreshes of a feed
 rss_refresh_time = 900
 # maximum age of a post before it's discarded:
