Basically just some documentation adjustments.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -1,3 +1,5 @@
+# Copy this to feed2discord.local.ini and THEN edit it.
+
 [MAIN]
 # 0 just prints some basic info as thing runs
 # 1 prints debug stuff for this bot
@@ -47,7 +49,9 @@ testing = 81402706320699392
 # actual time is randomly chosen from 0 to this number,
 # to minimize startup impact, especially on the servers we pull feeds from.
 # defaults to rss_refresh_time.
-start_skew = 900
+# start_skew = 900
+# minimum sleep time at startup; defaults to 0.1 seconds
+start_skew_min = 0.1
 # time between refreshes of a feed
 rss_refresh_time = 900
 # maximum age of a post before it's discarded:
