Change start_skew from float to int.

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -50,8 +50,8 @@ testing = 81402706320699392
 # to minimize startup impact, especially on the servers we pull feeds from.
 # defaults to rss_refresh_time.
 # start_skew = 900
-# minimum sleep time at startup; defaults to 0.1 seconds
-start_skew_min = 0.1
+# minimum sleep time at startup; defaults to 1 second
+start_skew_min = 1
 # time between refreshes of a feed
 rss_refresh_time = 900
 # maximum age of a post before it's discarded:
