config examples for dict list field parsing and filtering

--- a/feed2discord.examples.ini
+++ b/feed2discord.examples.ini
@@ -121,3 +121,11 @@ fields = **title**,*published*,link
 max_age = 86400
 feed_url = https://www.youtube.com/feeds/videos.xml?playlist_id=PLmX89YRYfWK2rUtmiKDg-R85FcRlLa8X4
 fields = **title**,*published*,*link*
+
+# shows the parsing of dict lists. Format is [delimiter]field.key
+[wccftech]
+channels = one
+feed_url = https://wccftech.com/feed/
+fields = **title**,description,"Tagged as",[ | ]tags.term,<link>
+filter_field = [|]tags.term
+one.filter = (?i)(amd|nvidia|intel)
