--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-discord.py>=0.13.0
+discord.py==1.3.3
 feedparser==5.2.1
-html2text==2016.5.29
-python-dateutil==2.5.3
-pytz==2016.4
-requests>=2.20.0
-six==1.10.0
-ws4py==0.3.5
+html2text==2020.1.16
+python-dateutil==2.8.1
+pytz==2020.1
+requests>=2.23.0
+six==1.15.0
+ws4py==0.5.1
