Add configuration for whether or not to publish messages (possible per-feed, but example is global in MAIN)

--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -27,6 +27,11 @@ login_token = abc123
 # current directory:
 db_path = feed2discord.db
 
+# If you have a server with "NEWS" / "Announcement" feature on
+# and publish=1, then any channel with NEWS on that the bot has "manage_messages" permissions in,
+# will have its messages "published" so that they show up on any servers that Follow that channel.
+publish = 0
+
 # Can set the "game played" to whatever you want
 #gameplayed = discord_rss_bot
 
