Add a bunch of static analysis to our puppet code

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
+# including some GitLab "templates" to enable their automatic checking of stuff
 include:
-
   # Static Application Security Testing
   - template: SAST.gitlab-ci.yml
 
@@ -8,3 +8,34 @@ include:
 
   # License Scanning; Overkill, but shouldn't hurt
   - template: License-Scanning.gitlab-ci.yml
+
+image: "python:3.6"
+
+before_script:
+  - python --version
+  - pip install -r requirements.txt
+
+stages:
+  - Static Analysis
+
+flake8:
+  stage: Static Analysis
+  allow_failure: true
+  script:
+  - flake8 --max-line-length=120 *.py
+  
+mypy:
+  stage: Static Analysis
+  allow_failure: true
+  script:
+  - pwd
+  - ls -l
+  - python -m mypy feed2discord.py
+  - python -m mypy show_all_entries.py
+  - python -m mypy show_sample_entry.py
+  
+pylint:
+  stage: Static Analysis
+  allow_failure: true
+  script:
+  - pylint -d C0301 *.py
