--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
+aiosqlite==0.13.0
 discord.py==1.3.3
 feedparser==5.2.1
+flake8
 html2text==2020.1.16
+in_place
+mypy
+pylint
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
 six==1.15.0
 ws4py==0.5.1
-aiosqlite==0.13.0
-flake8
-mypy
-pylint
