--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ stages:
 flake8:
   stage: test
   script:
-  - flake8 --max-line-length=120 *.py
+  - flake8  --ignore=F841 --show-source --max-line-length=120 *.py
   
 #mypy:
 #  stage: test
