--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ stages:
 
 flake8:
   stage: test
+  allow_failure: true
   script:
   - flake8  --ignore=F841 --show-source --max-line-length=120 *.py
   
