--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-discord.py==1.3.3
+aiohttp==3.6.2
+discord.py==1.3.4
 feedparser==5.2.1
-flake8
+flake8==3.8.3
 html2text==2020.1.16
-in_place
-mypy
-pylint
+in-place==0.4.0
+mypy==0.780
+pylint==1.6.5
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
