--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.1
+aiohttp==3.7.4
 aiosqlite==0.17.0
 discord.py==1.7.3
 feedparser==6.0.8
@@ -11,4 +11,5 @@ python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
 six==1.15.0
+urllib3==1.26.9
 ws4py==0.5.1
