--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.7.4
 aiosqlite==0.17.0
+aiomysql==0.1.0
 discord.py==1.7.3
 feedparser==6.0.8
 flake8==4.0.1
@@ -7,6 +8,7 @@ html2text==2020.1.16
 in-place==0.5.0
 mypy==0.950
 pylint==2.13.7
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
