--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,15 @@
 {
   "extends": [
     "config:base"
+  ],
+  "labels": ["dependencies"],
+  "assignees": ["freiheit@gmail.com"],
+  "dependencyDashboardAutoclose": true,
+  "schedule": [
+    "after 5pm and before 10pm every weekday",
+    "every weekend"
   ]
+  "constraints": {
+    "python": ">= 3.9"
+  }
 }
