--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
   "labels": ["dependencies"],
   "assignees": ["freiheit@gmail.com"],
   "dependencyDashboardAutoclose": true,
+  "timezone": "America/Los_Angeles",
   "schedule": [
     "after 5pm and before 10pm every weekday",
     "every weekend"
