--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiohttp>=3.7.0<=4
 aiosqlite>=0.17.0<=1
-aiomysql==0.1.1
-discord.py>=1.7<=2.0
+discord.py==1.7.3
 feedparser>=6.0<=7
 flake8
 html2text==2020.1.16
@@ -14,3 +13,5 @@ requests>=2.27.1<=3
 six>=1.16.0<=2
 urllib3>=1.26.9<=2
 ws4py>=0.5.1<=1
+websockets
+chevron==0.13.1
