add docker condition for an easier troubleshooting on behaviour in containers and static

--- a/templates/config_template.ini
+++ b/templates/config_template.ini
@@ -6,6 +6,7 @@ timezone = {{ timezone }}
 login_token = {{ login_token }}
 db_path = {{ db_path }}
 publish = {{ publish }}
+docker = True
 
 [CHANNELS]
 testing = 81402706320699392
