--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,11 @@
 include:
 - template: SAST.gitlab-ci.yml
 - template: Dependency-Scanning.gitlab-ci.yml
-- template: License-Scanning.gitlab-ci.yml
 - template: Security/SAST.gitlab-ci.yml
 - template: Security/Secret-Detection.gitlab-ci.yml
-- project: 'renovate-bot/renovate-runner'
-  file: '/templates/renovate-dind.gitlab-ci.yml'
+
+#- project: 'renovate-bot/renovate-runner'
+#  file: '/templates/renovate-dind.gitlab-ci.yml'
 
 stages:
 - build
