Strip down to just some linting...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,12 @@
 
 
 include:
-- template: SAST.gitlab-ci.yml
-- template: Dependency-Scanning.gitlab-ci.yml
-- template: Security/SAST.gitlab-ci.yml
-- template: Security/Secret-Detection.gitlab-ci.yml
+#- template: SAST.gitlab-ci.yml
+#- template: Dependency-Scanning.gitlab-ci.yml
+#- template: Security/SAST.gitlab-ci.yml
+#- template: Security/Secret-Detection.gitlab-ci.yml
 - template: Python.gitlab-ci.yml 
-- template: Code-Quality.gitlab-ci.yml
+#- template: Code-Quality.gitlab-ci.yml
 
 stages:
 - build
