Don't include the `setup.py` bits of python test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,3 +22,8 @@ pages:
 run:
     script:
         - echo Not running it for now
+
+test:
+    script:
+        - pip install tox flake8
+        - tox -e py,flake8
