--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,29 +1,34 @@
 # https://gitlab.com/gitlab-org/gitlab-foss/tree/master/lib/gitlab/ci/templates
 
+# Copied from https://gitlab.com/gitlab-org/gitlab-foss/-/blob/master/lib/gitlab/ci/templates/Python.gitlab-ci.yml
+image: python:latest
 
-include:
-#- template: SAST.gitlab-ci.yml
-#- template: Dependency-Scanning.gitlab-ci.yml
-#- template: Security/SAST.gitlab-ci.yml
-#- template: Security/Secret-Detection.gitlab-ci.yml
-- template: Python.gitlab-ci.yml 
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
-stages:
-- build
-- test
-- deploy
-- dast
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/topics/caching/
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
+cache:
+  paths:
+    - .cache/pip
+    - venv/
 
-pages:
-    script:
-        - echo No pages
-    artifacts: {}
-        
-run:
-    script:
-        - echo Not running it for now
+before_script:
+  - python --version  # For debugging
+  - pip install virtualenv
+  - virtualenv venv
+  - source venv/bin/activate
 
 test:
-    script:
-        - pip install tox flake8
-        - tox -e py,flake8
+  script:
+    # - python setup.py test
+    - pip install tox flake8  # you can also use tox
+    - tox -e py,flake8
+
+stages:
+   - test
