--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@
 include:
 - template: SAST.gitlab-ci.yml
 - template: Dependency-Scanning.gitlab-ci.yml
-- template: License-Scanning.gitlab-ci.yml
+# - template: License-Scanning.gitlab-ci.yml
 - template: Security/SAST.gitlab-ci.yml
 - template: Security/Secret-Detection.gitlab-ci.yml
 - project: 'renovate-bot/renovate-runner'
