--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-aiohttp>=3.7.0<=4
-aiosqlite>=0.17.0<=1
-aiomysql==0.2.0
-discord.py>=1.7<=2.0
-feedparser>=6.0<=7
+aiohttp
+aiomysql
+discord.py
+feedparser
 flake8
-html2text==2020.1.16
-in-place>=0.5.0<=1
+html2text
+in-place
 pylint
-python-dateutil>=2.8.0<=3
-PyMySQL==1.1.0
-pytz==2023.4
-requests>=2.27.1<=3
-six>=1.16.0<=2
-urllib3>=1.26.9<=2
-ws4py>=0.5.1<=1
+python-dateutil
+PyMySQL
+pytz
+requests
+six
+urllib3
+ws4py
